# tomisp

./: README.md  pyproject.toml
examples/: sample_aws_lb.attack.py  sample_aws_lb.py  sample_aws_waf.fromfile.py  sample_aws_waf.json  sample_aws_waf.py  sample_compromised_user.py  sample_gsuite.py  sample_helper.py  sample_insider_exfil.py  sample_okta.py  sample_okta_bruteforce.py  sample_simple.py
scripts/: generate_from_json.py  init_tags.py  run_local_docker.sh
tests/: misphelper_test.py  tomisp_common_test.py
tomisp/: __init__.py  common.py  generated.py  misphelper.py
